--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,6 +25,9 @@
     <style name="Background">
         <item name="android:background">@color/screenBack</item>
     </style>
+    <style name="DotColor">
+        <item name="selectedDotColor">@color/black</item>
+    </style>
 
     <style name="CommonBackground">
         <item name="android:background">@color/white</item>
