--- a/app/src/main/res/layout/billdetails_shimmer.xml
+++ b/app/src/main/res/layout/billdetails_shimmer.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
     <!-- Back button shimmer -->
     <View
@@ -19,11 +18,12 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:background="@drawable/bg_shimmer"
         android:orientation="horizontal"
-        android:padding="16dp">
+        android:padding="20dp">
 
         <!-- Profile image shimmer -->
         <View
             android:layout_width="40dp"
+            android:padding="9dp"
             android:layout_height="40dp"
             android:background="@drawable/bg_shimmer" />
 
@@ -71,7 +71,7 @@
     <View
         android:layout_width="150dp"
         android:layout_height="24dp"
-        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_25sdp"
         android:background="@drawable/bg_shimmer" />
 
     <View
@@ -103,14 +103,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:orientation="vertical">
 
-        <include layout="@layout/item_split_details_shimmer" />
-        <include layout="@layout/item_split_details_shimmer" />
-        <include layout="@layout/item_split_details_shimmer" />
-        <include layout="@layout/item_split_details_shimmer" />
-        <include layout="@layout/item_split_details_shimmer" />
         <include layout="@layout/item_split_details_shimmer" />
         <include layout="@layout/item_split_details_shimmer" />
         <include layout="@layout/item_split_details_shimmer" />
