--- a/app/src/main/res/layout/group_all_expenses_shimmer.xml
+++ b/app/src/main/res/layout/group_all_expenses_shimmer.xml
@@ -7,6 +7,7 @@
     <!-- Header with Gradient -->
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
+        android:background="@android:color/transparent"
         android:id="@+id/topBar"
         android:layout_height="wrap_content">
 
