--- a/app/src/main/res/layout/shimmer_friend_all_expense.xml
+++ b/app/src/main/res/layout/shimmer_friend_all_expense.xml
@@ -8,6 +8,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:id="@+id/topBar"
+        android:background="@android:color/transparent"
         android:layout_height="wrap_content">
 
         <LinearLayout
