--- a/app/src/main/res/layout/fragment_friends_all_expenses.xml
+++ b/app/src/main/res/layout/fragment_friends_all_expenses.xml
@@ -43,7 +43,7 @@
                 style="@style/iconTintColor"/>
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/ImageOfExpense"
+                android:id="@+id/ImageProfile"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="10dp"
