--- a/app/src/main/res/layout/bill_detail_item_layout.xml
+++ b/app/src/main/res/layout/bill_detail_item_layout.xml
@@ -10,50 +10,13 @@
         android:layout_width="20dp"
         android:layout_height="1dp" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/bill_detail_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLines="2"
         android:layout_marginStart="@dimen/_6sdp"
         android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLength="15"
-            android:text="ALI"
-            android:textColor="@color/gray"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/splitDetails"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="@dimen/_10sdp"
-            android:text="paid"
-            android:textColor="@color/gray"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/currency"
-            android:layout_width="wrap_content"
-            android:text="$"
-            android:layout_height="wrap_content"
-            style="@style/billWordColor"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/amount"
-            android:layout_width="wrap_content"
-            android:text="20"
-            android:layout_height="wrap_content"
-            style="@style/billWordColor"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
+        android:textSize="16sp" />
 
 </LinearLayout>
