--- a/app/src/main/res/layout/fragment_add_members.xml
+++ b/app/src/main/res/layout/fragment_add_members.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,7 +11,7 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -46,10 +46,11 @@
         android:id="@+id/curveCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/appBarLayout"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
         android:layout_marginHorizontal="@dimen/_10sdp"
         android:layout_marginBottom="8dp"
         app:cardCornerRadius="20dp"
+        android:visibility="gone"
         app:cardElevation="0dp">
 
         <FrameLayout
@@ -74,15 +75,15 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/curveCard"
-        android:layout_above="@id/fabAddMembers">
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/curveCard"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
 
             <TextView
                 android:id="@+id/friendsTitle"
@@ -118,7 +119,6 @@
                 android:layout_width="match_parent"
                 android:layout_gravity="center"
                 android:layout_height="match_parent"
-                android:layout_below="@id/recentTitle"
                 android:gravity="center"
                 android:visibility="gone">
 
@@ -137,6 +137,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
+                android:paddingBottom="60dp"
                 android:paddingHorizontal="@dimen/_10sdp" />
 
         </LinearLayout>
@@ -145,14 +146,14 @@
     <RelativeLayout
         android:id="@+id/shimmerContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/selectedContactsRecyclerView">
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <com.facebook.shimmer.ShimmerFrameLayout
             android:id="@+id/shimmer_view_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignWithParentIfMissing="true"
             app:shimmer_duration="1000">
 
             <ViewStub
@@ -167,8 +168,8 @@
         android:id="@+id/fabAddMembers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp"
         android:contentDescription="Add Members"
         android:src="@drawable/savecontact"
@@ -176,4 +177,4 @@
         style="@style/FloatButtonBackground"
         app:tint="@android:color/white" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
