--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/Background"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    tools:context=".UI.Activity.Login">
+    tools:context=".UI.Activity.ForgotPassword">
 
     <ImageView
         android:id="@+id/ivLogo"
@@ -19,20 +18,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_10"
+        android:gravity="center"
+        android:text="@string/forgot_password"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        style="@style/billWordColor"
+        app:layout_constraintTop_toBottomOf="@id/ivLogo" />
+
+    <TextView
+        android:id="@+id/tvInstructions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_10"
+        android:gravity="center"
+        android:text="@string/reset_password_instructions"
+        style="@style/billWordColor"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
     <com.google.android.material.textfield.TextInputLayout
-
         android:id="@+id/etEmail"
         style="@style/CustomTextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_20"
         android:paddingHorizontal="@dimen/dp_15"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivLogo">
+        app:layout_constraintTop_toBottomOf="@id/tvInstructions">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etLoginEmail"
+            android:id="@+id/etResetEmail"
             android:textCursorDrawable="@drawable/day_cursor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,37 +62,14 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/etPassword"
-        style="@style/CustomTextInputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:paddingHorizontal="@dimen/dp_15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmail"
-        app:passwordToggleEnabled="true">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etLoginPassword"
-            style="@style/CustomTextInputEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/your_password"
-            android:inputType="textPassword" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
     <LinearLayout
         android:id="@+id/buttonLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="@dimen/dp_20"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword">
+        app:layout_constraintTop_toBottomOf="@+id/etEmail">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -81,7 +78,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btnBackLogin"
+                android:id="@+id/btnBack"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
@@ -91,31 +88,16 @@
                 android:textColor="@color/black" />
 
             <Button
-                android:id="@+id/btnDoneLogin"
+                android:id="@+id/btnResetPassword"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:layout_weight="1"
                 style="@style/buttonBackground"
-                android:text="@string/done"
+                android:text="@string/reset_password"
                 android:textColor="@color/white" />
-
-
         </LinearLayout>
-
-
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="@string/forgot_password"
-        android:id="@+id/forget"
-        style="@style/billWordColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLayout" />
 
     <FrameLayout
         android:id="@+id/loadingLayout"
@@ -161,6 +143,5 @@
         </androidx.cardview.widget.CardView>
 
     </FrameLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
